2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/generate-cases.py,
	  support/regression/tests/*.c.in:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  support/regression/ports/ucz80-undoc,
	  support/regression/Makefile.in,
	  src/z80/gen.c:
	  Support for undocumented Z80 instructions.

2022-03-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80mch.c:
	  Disable undocumented instructions for Z180.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/generate-cases.py:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCsymt.c,
	  support/regression/tests/widebitintbitfield.c:
	  _BitInt promotion fix.
	* src/SDCCicode.c:
	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/bug-3368.c:
	  Fix bug #3368.
	* support/regression/tests/bug-3235.c:
	  Test for a bug that was fixd a while ago.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3372.c:
	  Fix bug #3372.
	* src/SDCCsymt.c:
	  Improve debug output for bit-fields.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8adr.c,
	  sdas/as8xcxxx/ds8mch.c:
	  Merge error messages from upstream ASxxxx 5.40.
